--- a/app/static/css/core/base.css
+++ b/app/static/css/core/base.css
@@ -323,3 +323,14 @@ h1 {
     font-size: 16px;
     color: #333;
 }
+/* Login Page Links */
+.login-link {
+    text-decoration: none;
+    color: #4a5568;
+    font-size: 0.9em;
+    transition: color 0.2s;
+}
+
+.login-link:hover {
+    color: #772432; /* Toastmasters core color */
+}
