--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -301,11 +301,11 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><label for="ge_style">GE Style:</label></td>
+                        <td><label for="ge_mode">GE Style:</label></td>
                         <td>
-                            <select id="ge_style" name="ge_style" required>
-                                <option value="Multiple shots">Distributed (1m+3m)</option>
-                                <option value="One shot" selected>Traditional (5m)</option>
+                            <select id="ge_mode" name="ge_mode" required>
+                                <option value="1">Distributed (1ms+3m)</option>
+                                <option value="0" selected>Traditional (5m)</option>
                             </select>
                         </td>
                     </tr>
