--- a/app/templates/roster.html
+++ b/app/templates/roster.html
@@ -106,7 +106,7 @@
                     </tr>
                     {% endfor %}
                     
-                    {# 如果没有条目，则显示15个空白行 #}
+                    {# If no entries, display 15 blank rows #}
                     {% if not roster_entries %}
                         {% for i in range(1, 16) %}
                         <tr>
