feat: Make contact modal accordions mutually exclusive and open 'Basic Information' by default.

--- a/app/templates/_contact_modal.html
+++ b/app/templates/_contact_modal.html
@@ -16,8 +16,8 @@
         </div>
       </div>
       <!-- Accordion 1: Basic Information -->
-      <button type="button" class="accordion">Basic Information</button>
-      <div class="panel">
+      <button type="button" class="accordion active">Basic Information</button>
+      <div class="panel" style="max-height: 1000px;"> <!-- Expanded by default -->
         <table class="form-table">
             <tr>
             <td>
